welcome.lessons.welcome.bat.bool1.CountTeen.scala.error
countTeen:4: error: 'case' expected but '(' found.
	(a,_,_,_) if (a>=13 && a<=19) => nb = nb + 1;
        ^countTeen:4: error: '}' expected but ';' found.
	(a,_,_,_) if (a>=13 && a<=19) => nb = nb + 1;
                                                    ^countTeen:5: error: ';' expected but 'if' found.
	(_,b,_,_) if (b>=13 && b<=19) => nb = nb + 1
                  ^countTeen:6: error: ';' expected but 'if' found.
	(_,_,c,_) if (c>=13 && c<=19) => nb = nb + 1
                  ^countTeen:7: error: ';' expected but 'if' found.
	(_,_,_,d) if (d>=13 && d<=19) => nb = nb + 1
                  ^countTeen:10: error: eof expected but '}' found.
 }
 ^